# chainlink-prediction-settler

./: .gitignore  LICENSE  README.md  deploy.ps1  package-lock.json  package.json
.github/workflows/: rust.yml
contracts/: PredictionMarket.sol
metamask-wagmi/: README.md  package.json  pnpm-lock.yaml  wagmi.config.ts
metamask-wagmi/app/: globals.css  layout.tsx  page.tsx  providers.tsx
metamask-wagmi/components/: Hero.tsx  navbar.tsx
mm-react-quickstart/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
mm-react-quickstart/src/: App.css  App.tsx
settler/: Cargo.toml
settler/src/: fba.rs  main.rs
workflow/ai_prediction_mcp/: config.staging.json  main.ts  package.json  project.yaml  secrets.yaml  workflow.yaml
workflow/hyperliquid_mcp/: config.staging.json  main.ts  package.json  project.yaml  secrets.yaml  workflow.yaml
workflow/payroll_mcp/: config.staging.json  main.ts  project.yaml  secrets.yaml  workflow.yaml
