[package]
name = "prediction-settler"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for on-chain prediction market settlement via Chainlink CRE"

[[bin]]
name = "settler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
alloy = { version = "0.6", features = ["full"] }
dotenv = "0.15"
anyhow = "1"